@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PseudoTerminal.m,v 1.276 2004-03-23 03:19:56 yfabian Exp $
+// $Id: PseudoTerminal.m,v 1.277 2004-03-24 03:16:01 ujwal Exp $
 //
 /*
  **  PseudoTerminal.m
@@ -1447,6 +1447,9 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 	[displayProfileMgr setColor: [current selectedTextColor] forType: TYPE_SELECTED_TEXT_COLOR forProfile: displayProfile];
 	[displayProfileMgr setColor: [current cursorColor] forType: TYPE_CURSOR_COLOR forProfile: displayProfile];
 	[displayProfileMgr setColor: [current cursorTextColor] forType: TYPE_CURSOR_TEXT_COLOR forProfile: displayProfile];
+	
+	[[PreferencePanel sharedInstance] savePreferences];
+	
 	NSRunInformationalAlertPanel([NSString stringWithFormat: NSLocalizedStringFromTableInBundle(@"Display Profile Saved To: %@",@"iTerm", [NSBundle bundleForClass: [self class]], @"Profile"), displayProfile],
 								 NSLocalizedStringFromTableInBundle(@"All bookmarks associated with this profile are effected",@"iTerm", [NSBundle bundleForClass: [self class]], @"Profile"), 
 								 NSLocalizedStringFromTableInBundle(@"OK",@"iTerm", [NSBundle bundleForClass: [self class]], @"Profile"), nil, nil);
@@ -1469,6 +1472,8 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 	[terminalProfileMgr setEncoding: [current encoding] forProfile: terminalProfile];
 	[terminalProfileMgr setSendIdleChar: [current antiIdle] forProfile: terminalProfile];
 	[terminalProfileMgr setIdleChar: [current antiCode] forProfile: terminalProfile];
+	
+	[[PreferencePanel sharedInstance] savePreferences];
 
 	NSRunInformationalAlertPanel([NSString stringWithFormat: NSLocalizedStringFromTableInBundle(@"Terminal Profile Saved To: %@",@"iTerm", [NSBundle bundleForClass: [self class]], @"Profile"), terminalProfile],
 								 NSLocalizedStringFromTableInBundle(@"All bookmarks associated with this profile are effected",@"iTerm", [NSBundle bundleForClass: [self class]], @"Profile"), 
